--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-fastapi
-uvicorn[standard]
-prometheus_client
+fastapi>=0.78.0
+uvicorn[standard]>=0.18.0
+asyncpg>=0.27.0
+prometheus-client>=0.14.1
+tenacity>=8.0.1
+pybreaker>=0.7.0
+locust>=2.15.0
+pydantic>=1.10.2
+pytest>=7.2.0
